--- a/style.css
+++ b/style.css
@@ -1039,7 +1039,7 @@ hr {
         position: absolute;
         top: 60%;
         right: 30%;
-        background-color: #333;
+        background-color: #fff;
         z-index: 100;
 
     }
